# Low-Latency-Edge-Based-Object-Detection-using-Model-Optimization-Techniques

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
